--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -4,7 +4,7 @@
     <!-- Спасибо -->
     <section>
         <div class="container">
-            <CENTER style='margin-top: 35%; margin-bottom: 35%;'><h1>Спасибо за заявку!</h1></CENTER>
+            <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>Спасибо за заявку!</h1></div>
         </div>
     </section>
     <!-- Спасибо -->
