--- a/templates/include/cards.html
+++ b/templates/include/cards.html
@@ -5,17 +5,15 @@
             <div class="card product_card" style="width: 18rem; background-color: #cd7f32;">
                 <div class="card-body">
                     <h5 class="card-title">BRONZE</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h3>10 000 руб.</h3>
+                    <p class="card-text">{{ card_1.description }}</p>
+                    <h3>{{ card_1.price }} руб.</h3>
                 </div>
             </div>
             <div class="card product_card" style="width: 18rem; background-color: #c0c0c0;">
                 <div class="card-body">
                     <h5 class="card-title">SILVER</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h3>20 000 руб.</h3>
+                    <p class="card-text">{{ card_2.description }}</p>
+                    <h3>{{ card_2.price }} руб.</h3>
                 </div>
             </div>
             <div class="card product_card" style="width: 18rem; background-color: #ffd700;">
