--- a/templates/include/cards.html
+++ b/templates/include/cards.html
@@ -19,9 +19,8 @@
             <div class="card product_card" style="width: 18rem; background-color: #ffd700;">
                 <div class="card-body">
                     <h5 class="card-title">GOLD</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <h3>30 000 руб.</h3>
+                    <p class="card-text">{{ card_3.description }}</p>
+                    <h3>{{ card_3.price }} руб.</h3>
                 </div>
             </div>
         </div>
