--- a/templates/pages/thanks.html
+++ b/templates/pages/thanks.html
@@ -4,7 +4,7 @@
     <!-- Спасибо -->
     <section>
         <div class="container">
-            <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>Спасибо за заявку!</h1></div>
+            <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>{{ name }}, Спасибо за заявку!</h1></div>
         </div>
     </section>
     <!-- Спасибо -->
