--- a/templates/include/form.html
+++ b/templates/include/form.html
@@ -5,16 +5,12 @@
             <form action="{% url 'thanks' %}" method="post" style="width: 50%;">
                 {% csrf_token %}
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Имя</label><br>
+                    <label class="col-sm-2 col-form-label">Имя</label><br>
                     {{ form.name }}
-                    <div class="">
-                    </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Телефон</label><br>
+                    <label class="col-sm-2 col-form-label">Телефон</label><br>
                     {{ form.phone }}
-                    <div class="">
-                    </div>
                 </div>
                 <div style="float: right;" class="form-group row">
                     <button type="submit" class="btn btn-success">ОСТАВИТЬ ЗАЯВКУ</button>
